--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -46,9 +46,9 @@ jobs:
           terraform ${{ github.event.inputs.name }} -var "subscription_id=${{ secrets.TF_SUBSCRIPTION_ID }}" -var "client_id=${{ secrets.TF_CLIENT_ID }}" -var "tenant_id=${{ secrets.TF_TENANT_ID }}" -var "client_secret=${{ secrets.TF_CLIENT_SECRET }}"
         working-directory: ./terraform
 
-      # - name: Terraform Apply
-      #   run: |
-      #     terraform ${{ github.event.inputs.name }} --auto-approve -var "subscription_id=${{ secrets.TF_SUBSCRIPTION_ID }}" -var "client_id=${{ secrets.TF_CLIENT_ID }}" -var "tenant_id=${{ secrets.TF_TENANT_ID }}" -var "client_secret=${{ secrets.TF_CLIENT_SECRET }}"
-      #   working-directory: ./terraform
+      - name: Terraform Apply
+        run: |
+          terraform ${{ github.event.inputs.name }} --auto-approve -var "subscription_id=${{ secrets.TF_SUBSCRIPTION_ID }}" -var "client_id=${{ secrets.TF_CLIENT_ID }}" -var "tenant_id=${{ secrets.TF_TENANT_ID }}" -var "client_secret=${{ secrets.TF_CLIENT_SECRET }}"
+        working-directory: ./terraform
 
         
